<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#990000"
    android:backgroundTint="#990000"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="Profile"
        android:textColor="#FFCC00"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:contentDescription="profilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/nameProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Name:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/userIDProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="ID:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProfileText" />

    <TextView
        android:id="@+id/usernameProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="Username:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIDProfileText" />

    <TextView
        android:id="@+id/emailProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="Email:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfileText" />

    <TextView
        android:id="@+id/phoneProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="Phone:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailProfileText" />

    <TextView
        android:id="@+id/otherInfoProfileText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="About Me:"
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneProfileText" />

    <TextView
        android:id="@+id/nameProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/nameProfileText"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:layout_editor_absoluteY="190dp" />

    <TextView
        android:id="@+id/userIDProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/userIDProfileText"
        app:layout_constraintTop_toBottomOf="@+id/nameProfileView" />

    <TextView
        android:id="@+id/usernameProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/usernameProfileText"
        app:layout_constraintTop_toBottomOf="@+id/userIDProfileView" />

    <TextView
        android:id="@+id/emailProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emailProfileText"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfileView" />

    <TextView
        android:id="@+id/phoneProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/phoneProfileText"
        app:layout_constraintTop_toBottomOf="@+id/emailProfileView" />

    <TextView
        android:id="@+id/otherInfoProfileView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/otherInfoProfileText"
        app:layout_constraintTop_toBottomOf="@+id/phoneProfileView" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#FFCC00"
        android:text="Edit Profile"
        android:textColor="#990000"
        android:onClick="onClickEditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherInfoProfileView" />

</androidx.constraintlayout.widget.ConstraintLayout>