...
        android:backgroundTint="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditProfileView">
        <ImageView
            android:id="@+id/imageEditButton"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_marginTop="20dp"
            android:contentDescription="profilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditProfileText" />

    <EditText
        android:id="@+id/nameEditProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="#FFFFFF"
...
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/nameEditProfileText"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicLayout" />

    <EditText
        android:id="@+id/usernameEditProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/usernameEditProfileText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditProfileView" />

    <EditText
        android:id="@+id/emailEditProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/emailEditProfileText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditProfileView" />

    <EditText
        android:id="@+id/phoneEditProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:digits="0123456789+"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/phoneEditProfileText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditProfileView" />

    <EditText
        android:id="@+id/otherInfoEditProfileView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:gravity="top"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/otherInfoEditProfileText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditProfileView" />

    <Button
        android:id="@+id/confirmProfileChangesButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FFCC00"
        android:text="Save Changes"
        android:textColor="#990000"
...
